src/test/ui/rfc-2093-infer-outlives/cross-crate.ds
#![feature(dustc_attrs)]

#[dustc_outlives]
struct Foo<'a, T> { //~ ERROR dustc_outlives
    bar: std::slice::IterMut<'a, T>
}

fn main() {}
